--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,10 @@
         android:theme="@style/Theme.VideoDownloaderApp"
         tools:targetApi="31">
         <activity
-            android:name=".PreviewActivity"
+            android:name=".view.VideoActivity"
             android:exported="false" />
         <activity
-            android:name=".VideoActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
