--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -17,6 +18,7 @@
         android:theme="@style/Theme.VideoDownloaderApp"
         tools:targetApi="31">
         <activity
+            android:configChanges="orientation|screenSize|keyboard|keyboardHidden|screenLayout|uiMode"
             android:name=".view.VideoActivity"
             android:exported="false" />
         <activity
